--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts",
-    "src/components/Intro.js"
+    "src/components/sections/IntroSection.tsx"
   ],
   "exclude": ["node_modules"]
 }
